semantic-analyzer/myCheckerParser.java
// $ANTLR 3.5.2 myChecker.g 2018-05-28 17:28:28

    // import packages here.
    import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class myCheckerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BREAK", "CASE", 
		"CHAR", "COLON", "COMMA", "COMMENT1", "COMMENT2", "CONTINUE", "DEC_NUM", 
		"DIGIT", "DIVIDE", "DIVIDEEQ", "DOT_", "DOUBLE", "ELSE", "ELSEIF", "EQ", 
		"FLOAT", "FLOAT_NUM", "FLOAT_NUM1", "FLOAT_NUM2", "FLOAT_NUM3", "FOR", 
		"GT", "GTEQ", "ID", "IF", "INCLUDE", "INT", "LBRACE", "LETTER", "LGAND", 
		"LGOR", "LONGLONG", "LPAREN", "LSHIFT", "LSQUARE", "LT", "LTEQ", "MINUS", 
		"MINUSEQ", "MM", "MOD", "MODEQ", "NEQ", "NEW_LINE", "NGT", "NLT", "NOT", 
		"OR", "PLUS", "PLUSEQ", "PP", "PRINT", "RBRACE", "RETURN", "RPAREN", "RSHIFT", 
		"RSQUARE", "SCANF", "SEMI", "SHARP", "SHORT", "STRING", "STRUCT", "SWITCH", 
		"TIME", "TIMEEQ", "VOID", "WHILE", "WS", "'.h'", "'main'"
	};
	public static final int EOF=-1;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BREAK=6;
	public static final int CASE=7;
	public static final int CHAR=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int COMMENT1=11;
	public static final int COMMENT2=12;
	public static final int CONTINUE=13;
	public static final int DEC_NUM=14;
	public static final int DIGIT=15;
	public static final int DIVIDE=16;
	public static final int DIVIDEEQ=17;
	public static final int DOT_=18;
	public static final int DOUBLE=19;
	public static final int ELSE=20;
	public static final int ELSEIF=21;
	public static final int EQ=22;
	public static final int FLOAT=23;
	public static final int FLOAT_NUM=24;
	public static final int FLOAT_NUM1=25;
	public static final int FLOAT_NUM2=26;
	public static final int FLOAT_NUM3=27;
	public static final int FOR=28;
	public static final int GT=29;
	public static final int GTEQ=30;
	public static final int ID=31;
	public static final int IF=32;
	public static final int INCLUDE=33;
	public static final int INT=34;
	public static final int LBRACE=35;
	public static final int LETTER=36;
	public static final int LGAND=37;
	public static final int LGOR=38;
	public static final int LONGLONG=39;
	public static final int LPAREN=40;
	public static final int LSHIFT=41;
	public static final int LSQUARE=42;
	public static final int LT=43;
	public static final int LTEQ=44;
	public static final int MINUS=45;
	public static final int MINUSEQ=46;
	public static final int MM=47;
	public static final int MOD=48;
	public static final int MODEQ=49;
	public static final int NEQ=50;
	public static final int NEW_LINE=51;
	public static final int NGT=52;
	public static final int NLT=53;
	public static final int NOT=54;
	public static final int OR=55;
	public static final int PLUS=56;
	public static final int PLUSEQ=57;
	public static final int PP=58;
	public static final int PRINT=59;
	public static final int RBRACE=60;
	public static final int RETURN=61;
	public static final int RPAREN=62;
	public static final int RSHIFT=63;
	public static final int RSQUARE=64;
	public static final int SCANF=65;
	public static final int SEMI=66;
	public static final int SHARP=67;
	public static final int SHORT=68;
	public static final int STRING=69;
	public static final int STRUCT=70;
	public static final int SWITCH=71;
	public static final int TIME=72;
	public static final int TIMEEQ=73;
	public static final int VOID=74;
	public static final int WHILE=75;
	public static final int WS=76;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCheckerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCheckerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[85+1];


	}

	@Override public String[] getTokenNames() { return myCheckerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myChecker.g"; }


	    boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String,Integer>();

	      int attr_type;
	      /*attr_type:
	        1 => integer,
	        2 => float,
	        3 => char,
	        4 => void,
	        5 => short,
	        6 => longlong,
	        7 => double,
	        8 => struct,
	        -1 => doesn't exsit,
	        -2 => error detected
	      */



	// $ANTLR start "entryPoint"
	// myChecker.g:39:1: entryPoint : ( INCLUDE '<' ID '.h' '>' )* ( subfunctions )* mainfunction ( subfunctions )* ;
	public final void entryPoint() throws RecognitionException {
		int entryPoint_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// myChecker.g:40:5: ( ( INCLUDE '<' ID '.h' '>' )* ( subfunctions )* mainfunction ( subfunctions )* )
			// myChecker.g:42:5: ( INCLUDE '<' ID '.h' '>' )* ( subfunctions )* mainfunction ( subfunctions )*
			{
			// myChecker.g:42:5: ( INCLUDE '<' ID '.h' '>' )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==INCLUDE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myChecker.g:42:6: INCLUDE '<' ID '.h' '>'
					{
					match(input,INCLUDE,FOLLOW_INCLUDE_in_entryPoint78); if (state.failed) return;
					match(input,LT,FOLLOW_LT_in_entryPoint81); if (state.failed) return;
					match(input,ID,FOLLOW_ID_in_entryPoint83); if (state.failed) return;
					match(input,77,FOLLOW_77_in_entryPoint85); if (state.failed) return;
					match(input,GT,FOLLOW_GT_in_entryPoint87); if (state.failed) return;
					}
					break;

				default :
					break loop1;
				}
			}

			// myChecker.g:44:5: ( subfunctions )*
			loop2:
			while (true) {
				int alt2=2;
				switch ( input.LA(1) ) {
				case INT:
					{
					int LA2_1 = input.LA(2);
					if ( (LA2_1==ID) ) {
						alt2=1;
					}

					}
					break;
				case VOID:
					{
					int LA2_3 = input.LA(2);
					if ( (LA2_3==ID) ) {
						alt2=1;
					}

					}
					break;
				case CHAR:
				case DOUBLE:
				case FLOAT:
				case LONGLONG:
				case SHORT:
				case STRUCT:
					{
					alt2=1;
					}
					break;
				}
				switch (alt2) {
				case 1 :
					// myChecker.g:44:5: subfunctions
					{
					pushFollow(FOLLOW_subfunctions_in_entryPoint100);
					subfunctions();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop2;
				}
			}

			pushFollow(FOLLOW_mainfunction_in_entryPoint108);
			mainfunction();
			state._fsp--;
			if (state.failed) return;
			// myChecker.g:47:5: ( subfunctions )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==CHAR||LA3_0==DOUBLE||LA3_0==FLOAT||LA3_0==INT||LA3_0==LONGLONG||LA3_0==SHORT||LA3_0==STRUCT||LA3_0==VOID) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// myChecker.g:47:5: subfunctions
					{
					pushFollow(FOLLOW_subfunctions_in_entryPoint119);
					subfunctions();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, entryPoint_StartIndex); }

		}
	}
	// $ANTLR end "entryPoint"



	// $ANTLR start "vartypes"
	// myChecker.g:54:1: vartypes returns [int attr_type] : ( INT | FLOAT | CHAR | VOID | SHORT | LONGLONG | DOUBLE | STRUCT );
	public final int vartypes() throws RecognitionException {
		int attr_type = 0;

		int vartypes_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return attr_type; }

			// myChecker.g:55:3: ( INT | FLOAT | CHAR | VOID | SHORT | LONGLONG | DOUBLE | STRUCT )
			int alt4=8;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt4=1;
				}
				break;
			case FLOAT:
				{
				alt4=2;
				}
				break;
			case CHAR:
				{
				alt4=3;
				}
				break;
			case VOID:
				{
				alt4=4;
				}
				break;
			case SHORT:
				{
				alt4=5;
				}
				break;
			case LONGLONG:
				{
				alt4=6;
				}
				break;
			case DOUBLE:
				{
				alt4=7;
				}
				break;
			case STRUCT:
				{
				alt4=8;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return attr_type;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myChecker.g:56:7: INT
					{
					match(input,INT,FOLLOW_INT_in_vartypes147); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: INT");  attr_type = 1; }
					}
					break;
				case 2 :
					// myChecker.g:57:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_vartypes157); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: FLOAT");  attr_type = 2; }
					}
					break;
				case 3 :
					// myChecker.g:58:7: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_vartypes167); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: CHAR");  attr_type = 3; }
					}
					break;
				case 4 :
					// myChecker.g:59:7: VOID
					{
					match(input,VOID,FOLLOW_VOID_in_vartypes177); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: VOID");  attr_type = 4; }
					}
					break;
				case 5 :
					// myChecker.g:60:7: SHORT
					{
					match(input,SHORT,FOLLOW_SHORT_in_vartypes187); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: SHORT");  attr_type = 5; }
					}
					break;
				case 6 :
					// myChecker.g:61:7: LONGLONG
					{
					match(input,LONGLONG,FOLLOW_LONGLONG_in_vartypes197); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: LONGLONG");  attr_type = 6; }
					}
					break;
				case 7 :
					// myChecker.g:62:7: DOUBLE
					{
					match(input,DOUBLE,FOLLOW_DOUBLE_in_vartypes207); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: DOUBLE");  attr_type = 7; }
					}
					break;
				case 8 :
					// myChecker.g:63:7: STRUCT
					{
					match(input,STRUCT,FOLLOW_STRUCT_in_vartypes217); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: STRUCT");  attr_type = 8; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, vartypes_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "vartypes"



	// $ANTLR start "vardeclarations"
	// myChecker.g:68:1: vardeclarations returns [int attr_type] : vartypes a= ID ( COMMA b= ID )* SEMI ;
	public final int vardeclarations() throws RecognitionException {
		int attr_type = 0;

		int vardeclarations_StartIndex = input.index();

		Token a=null;
		Token b=null;
		int vartypes1 =0;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return attr_type; }

			// myChecker.g:69:3: ( vartypes a= ID ( COMMA b= ID )* SEMI )
			// myChecker.g:72:5: vartypes a= ID ( COMMA b= ID )* SEMI
			{
			pushFollow(FOLLOW_vartypes_in_vardeclarations253);
			vartypes1=vartypes();
			state._fsp--;
			if (state.failed) return attr_type;
			a=(Token)match(input,ID,FOLLOW_ID_in_vardeclarations259); if (state.failed) return attr_type;
			// myChecker.g:72:21: ( COMMA b= ID )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==COMMA) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// myChecker.g:72:22: COMMA b= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_vardeclarations262); if (state.failed) return attr_type;
					b=(Token)match(input,ID,FOLLOW_ID_in_vardeclarations268); if (state.failed) return attr_type;
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,SEMI,FOLLOW_SEMI_in_vardeclarations272); if (state.failed) return attr_type;
			if ( state.backtracking==0 ) {
				   if (symtab.containsKey((a!=null?a.getText():null))) 
			     {
				       System.out.println("Type Error: " + a.getLine() + ": redeclared identifier " + (a!=null?a.getText():null));
				   }
			     else
			     {
			           symtab.put((a!=null?a.getText():null), vartypes1);
				   }
				   
				   if ((b!=null?b.getText():null) != null)
			     {
						if (symtab.containsKey((b!=null?b.getText():null))) 
			      {
						    System.out.println("Type Error: " + b.getLine() + ": redeclared identifier " + (b!=null?b.getText():null) );
						}
			      else 
			      {
							symtab.put((b!=null?b.getText():null), vartypes1);
						}
				   }	   
				 }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, vardeclarations_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "vardeclarations"



	// $ANTLR start "varassignments"
	// myChecker.g:101:1: varassignments returns [int attr_type] : ID ASSIGN expressions SEMI ;
	public final int varassignments() throws RecognitionException {
		int attr_type = 0;

		int varassignments_StartIndex = input.index();

		Token ID2=null;
		ParserRuleReturnScope expressions3 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return attr_type; }

			// myChecker.g:102:5: ( ID ASSIGN expressions SEMI )
			// myChecker.g:103:5: ID ASSIGN expressions SEMI
			{
			ID2=(Token)match(input,ID,FOLLOW_ID_in_varassignments301); if (state.failed) return attr_type;
			match(input,ASSIGN,FOLLOW_ASSIGN_in_varassignments303); if (state.failed) return attr_type;
			pushFollow(FOLLOW_expressions_in_varassignments305);
			expressions3=expressions();
			state._fsp--;
			if (state.failed) return attr_type;
			match(input,SEMI,FOLLOW_SEMI_in_varassignments307); if (state.failed) return attr_type;
			if ( state.backtracking==0 ) {
			     // 檢查是否存在此 identifier
				   if (symtab.containsKey((ID2!=null?ID2.getText():null))) 
			     {
				       attr_type = symtab.get((ID2!=null?ID2.getText():null));
				   } 
			     
			     else 
			     {
						System.out.println("Type Error: " + ID2.getLine() + ": undeclared identifier " + (ID2!=null?ID2.getText():null) );
						attr_type = -2;
						return attr_type;
				   }

			     // 檢查兩者型態 (vartypes) 是否一致
				   if (symtab.get((ID2!=null?ID2.getText():null)) != (expressions3!=null?((myCheckerParser.expressions_return)expressions3).attr_type:0)) 
			     {
						System.out.println("Type Error: " + (expressions3!=null?(expressions3.start):null).getLine() + ": types of leftside operand differs from the rightside operand");
						attr_type = -2;
			     }
				}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, varassignments_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "varassignments"


	public static class expressions_return extends ParserRuleReturnScope {
		public int attr_type;
	};


	// $ANTLR start "expressions"
	// myChecker.g:135:1: expressions returns [int attr_type] : a= operations ( LGAND b= operations | LGOR b= operations )* ;
	public final myCheckerParser.expressions_return expressions() throws RecognitionException {
		myCheckerParser.expressions_return retval = new myCheckerParser.expressions_return();
		retval.start = input.LT(1);
		int expressions_StartIndex = input.index();

		int a =0;
		int b =0;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

			// myChecker.g:136:3: (a= operations ( LGAND b= operations | LGOR b= operations )* )
			// myChecker.g:137:3: a= operations ( LGAND b= operations | LGOR b= operations )*
			{
			pushFollow(FOLLOW_operations_in_expressions349);
			a=operations();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) {retval.attr_type = a;}
			// myChecker.g:137:47: ( LGAND b= operations | LGOR b= operations )*
			loop6:
			while (true) {
				int alt6=3;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==LGAND) ) {
					alt6=1;
				}
				else if ( (LA6_0==LGOR) ) {
					alt6=2;
				}

				switch (alt6) {
				case 1 :
					// myChecker.g:138:7: LGAND b= operations
					{
					match(input,LGAND,FOLLOW_LGAND_in_expressions361); if (state.failed) return retval;
					pushFollow(FOLLOW_operations_in_expressions367);
					b=operations();
					state._fsp--;
					if (state.failed) return retval;
					}
					break;
				case 2 :
					// myChecker.g:139:7: LGOR b= operations
					{
					match(input,LGOR,FOLLOW_LGOR_in_expressions375); if (state.failed) return retval;
					pushFollow(FOLLOW_operations_in_expressions382);
					b=operations();
					state._fsp--;
					if (state.failed) return retval;
					}
					break;

				default :
					break loop6;
				}
			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, expressions_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "expressions"



	// $ANTLR start "operations"
	// myChecker.g:144:1: operations returns [int attr_type] : a= addexprs ( ( EQ | NEQ | LT | NLT | GT | NGT | GTEQ | LTEQ | ASSIGN | PLUSEQ | MINUSEQ | TIMEEQ | DIVIDEEQ ) b= addexprs )* ;
	public final int operations() throws RecognitionException {
		int attr_type = 0;

		int operations_StartIndex = input.index();

		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return attr_type; }

			// myChecker.g:145:3: (a= addexprs ( ( EQ | NEQ | LT | NLT | GT | NGT | GTEQ | LTEQ | ASSIGN | PLUSEQ | MINUSEQ | TIMEEQ | DIVIDEEQ ) b= addexprs )* )
			// myChecker.g:146:3: a= addexprs ( ( EQ | NEQ | LT | NLT | GT | NGT | GTEQ | LTEQ | ASSIGN | PLUSEQ | MINUSEQ | TIMEEQ | DIVIDEEQ ) b= addexprs )*
			{
			pushFollow(FOLLOW_addexprs_in_operations407);
			a=addexprs();
			state._fsp--;
			if (state.failed) return attr_type;
			if ( state.backtracking==0 ) { attr_type = (a!=null?((myCheckerParser.addexprs_return)a).attr_type:0); }
			// myChecker.g:146:47: ( ( EQ | NEQ | LT | NLT | GT | NGT | GTEQ | LTEQ | ASSIGN | PLUSEQ | MINUSEQ | TIMEEQ | DIVIDEEQ ) b= addexprs )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==ASSIGN||LA7_0==DIVIDEEQ||LA7_0==EQ||(LA7_0 >= GT && LA7_0 <= GTEQ)||(LA7_0 >= LT && LA7_0 <= LTEQ)||LA7_0==MINUSEQ||LA7_0==NEQ||(LA7_0 >= NGT && LA7_0 <= NLT)||LA7_0==PLUSEQ||LA7_0==TIMEEQ) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// myChecker.g:146:48: ( EQ | NEQ | LT | NLT | GT | NGT | GTEQ | LTEQ | ASSIGN | PLUSEQ | MINUSEQ | TIMEEQ | DIVIDEEQ ) b= addexprs
					{
					if ( input.LA(1)==ASSIGN||input.LA(1)==DIVIDEEQ||input.LA(1)==EQ||(input.LA(1) >= GT && input.LA(1) <= GTEQ)||(input.LA(1) >= LT && input.LA(1) <= LTEQ)||input.LA(1)==MINUSEQ||input.LA(1)==NEQ||(input.LA(1) >= NGT && input.LA(1) <= NLT)||input.LA(1)==PLUSEQ||input.LA(1)==TIMEEQ ) {
						input.consume();
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return attr_type;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_addexprs_in_operations516);
					b=addexprs();
					state._fsp--;
					if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { 		
					      if ((a!=null?((myCheckerParser.addexprs_return)a).attr_type:0) != (b!=null?((myCheckerParser.addexprs_return)b).attr_type:0)) {
					          System.out.println("Type Error: " + (a!=null?(a.start):null).getLine() + ": types of the operands in the compare-expressions are different");
					            attr_type = -2;
					      }
					    }
					}
					break;

				default :
					break loop7;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 6, operations_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "operations"


	public static class addexprs_return extends ParserRuleReturnScope {
		public int attr_type;
	};

